Fixed tablet layout issue with radio buttons

--- a/src/web/src/scss/_question.scss
+++ b/src/web/src/scss/_question.scss
@@ -5,6 +5,7 @@
 
   .govuk-radios__item {
     width: auto;
+    clear: both;
   }
 
   @include govuk-media-query($from: desktop) {
